# promptly

./: .dir-locals.el  .env.example  .gitattributes  .gitignore  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Makefile  README.rst  SECURITY.rst  clean-db.sh  default.mk  jest.config.js  package-lock.json  package.json  runner.py  setup.cfg  setup.py  webpack.config.js
.github/: dependabot.yml  labeler.yml
.github/workflows/: lint-backend.yml  lint-code.yaml  lint-code.yml  set-pr-labels.yml  test-backend.yaml  test-backend.yml  test-code.yaml  test-docs.yml  test-frontend.yaml  test-frontend.yml
backend/: .env.example  .gitignore  Makefile  runner.py  setup.cfg  setup.py
backend/docs/: .gitignore  Makefile  conf.py  configuration.rst  index.rst  installation.rst  license.rst  security.in  usage.rst
backend/docs/_static/: security.txt
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 9b61d3033aa3_fix_chatentry_content_field_name.py  b943c7643aa5_create_chats_and_chat_entries.py
backend/promptly/: __init__.py  app.py  utils.py
backend/promptly/api/: __init__.py  openai_eval.py
backend/promptly/chat/: __init__.py  template_filters.py
backend/promptly/main/: __init__.py  views.py
backend/promptly/models/: __init__.py  base.py  prompt.py
backend/promptly/services/: openai_service.py
backend/promptly/templates/: macros.html
backend/promptly/templates/chat/: chat.html  history.html
backend/promptly/templates/layout/: icons.html  sidebar.html
backend/requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
backend/tests/: __init__.py  conftest.py  prompts.txt  seeder.py  test_utils.py
backend/tests/chat/: test_chat_filters.py
docs/: Makefile  api_functions.rst  api_reference.rst  conf.py  configuration.rst  database.drawio  database.rst  index.rst  installation.rst  license.rst
fixtures/: fake-data.json
frontend/: .gitignore  jest.config.js  package-lock.json  package.json  webpack.config.js
frontend/__tests__/: chat.test.js  cookies.test.js
frontend/js/: chat.js
frontend/scss/: style.scss
migrations/: alembic.ini  db-clean.sqlite3  seed-chats-history.json
migrations/versions/: 02b742a74d0d_remove_teaser_from_chat_model.py  26415bbe32da_add_role_to_chat_enry.py  5b8718259edc_create_prompt_tables.py
promptly/: __init__.py  app.py  config.py  models.py  seeder.py  utils.py
promptly/api/: __init__.py  openai_eval.py  utils.py  views.py
promptly/chat/: __init__.py  views.py
promptly/main/: __init__.py  views.py
promptly/models/: __init__.py  base.py  chat.py  prompt.py
promptly/services/: __init__.py  openai_service.py
promptly/static/: manifest.json
promptly/static/css/: main.css  style.css
promptly/static/js/: chat.js  cookie.js  promptly.js  script.js  script.min.js
promptly/static/scss/: style.scss
promptly/templates/: base.html  home.html
promptly/templates/chat/: history.html
promptly/templates/layout/: base.html  footer.html  header.html  icons.html  sidebar.html
requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
tests/: conftest.py  prompts.txt  seeder.py  test_api_utils.py  test_seeder.py  test_utils.py
tests/api/: test_api_views.py
tests/chat/: test_chat_filters.py  test_chat_views.py
tests/frontend/: chat.test.js  cookies.test.js
tests/js/: chat.test.js  cookies.test.js
